# orbit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: override.yaml.example
deploy/: nginx-orbit.conf.template  orbit.service.template
deploy/advanced/: README.md  deploy.sh  deploy.yml.example  nginx-orbit-upstream.conf  orbit-deploy.service  orbit-deploy.timer  (+2 more)
scripts/: install.sh  poc_tmux_claude.py  update.sh
tests/: agent-tabs-order.test.js  audio-bus.test.js  conftest.py  hub-clipboard.test.js  projects-group.test.js  session-list-order.test.js  session-switcher-order.test.js  share-encode-path.test.js  share-route.test.js  test_agent_prompts_global_custom.py  test_artifact_view_route.py  test_bundled_mcp.py  test_capabilities_and_lifecycle_routes.py  test_cron_reconcile.py  test_cron_runner_extract.py  test_dashboard_mcp.py  test_discovery.py  test_hub_clipboard_asset.py  test_issues_feature.py  test_library_create.py  test_messages_pagination.py  test_notify.py  test_orchestrator_a2a.py  test_orchestrator_agent_tab_order.py  test_orchestrator_close_kill.py  test_orchestrator_env.py  test_orchestrator_jsonl_tail.py  test_orchestrator_lifecycle.py  test_orchestrator_oneshot.py  test_orchestrator_pool_shape.py  test_orchestrator_runner_tmux.py  test_orchestrator_settings.py  test_orchestrator_teleport.py  test_orchestrator_terminal_shortcuts.py  test_orchestrator_titles_native.py  test_orchestrator_tmux.py  test_orchestrator_ttyd.py  test_persistent_sessions.py  test_read_aloud.py  test_secrets_manager.py  (+7 more)
(+209 files in other folders)
