[project]
name = "orbit"
version = "0.1.0"
description = "Orbit — a self-hosted, mobile-first personal-server dashboard. PARA + apps auto-discovery, live status, logs, tasks, notifications, and an optional Claude Code orchestrator. Tailscale-only or behind auth."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "pillow>=10.4",
    "pydantic>=2.7",
    "json-repair>=0.30",
    "pywebpush>=2.0",
    "httpx>=0.27",
    "apscheduler==3.11.*",
]

[project.scripts]
orbit = "orbit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
# Put the working-tree src/ first so a bare `pytest` (not just `uv run pytest`)
# always tests the checkout, never a stale installed / ~/srv copy of the package.
pythonpath = ["src"]
testpaths = ["tests"]
